--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^9.4.0",
     "react-navigation": "^3.11.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
