--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-modal": "^11.5.6",
+    "react-native-otp-inputs": "^5.0.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.1",
